--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -16,6 +16,13 @@
     margin: 0;
     box-sizing: border-box;
 }
+.textItem{
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #EB8DC1;
+}
 
 @media (max-width: 768px) {
     .item {
